# cc-claude

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cc_claude/: cli.py  launcher.py  store.py  watchdog.py
